--- a/app/globals.css
+++ b/app/globals.css
@@ -72,6 +72,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    text-shadow: 0.5px 0.5px 2px rgba(0, 0, 0, 0.4);
   }
   html {
     scroll-behavior: smooth;
